[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Scouts_Cool_Menu.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/SceneSwitch.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="TextureRect"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.24
anchor_top = 0.46
anchor_right = 0.46
anchor_bottom = 0.61
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
path = "res://Testing/new scene.tscn"

[node name="Play 2!" type="Button" parent="TextureRect"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.46
anchor_right = 0.74
anchor_bottom = 0.61
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
path = "res://Testing/new scene.tscn"

[node name="Thing" type="Button" parent="TextureRect"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.24
anchor_top = 0.64
anchor_right = 0.74
anchor_bottom = 0.788
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
path = "res://Testing/new scene.tscn"

[node name="Exit" type="Button" parent="TextureRect"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.24
anchor_top = 0.8
anchor_right = 0.74
anchor_bottom = 0.95
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
path = "res://Testing/new scene.tscn"

[connection signal="pressed" from="TextureRect/Play" to="TextureRect/Play" method="_on_Play_pressed"]
[connection signal="pressed" from="TextureRect/Play 2!" to="TextureRect/Play 2!" method="_on_Play_2_pressed"]
[connection signal="pressed" from="TextureRect/Thing" to="TextureRect/Thing" method="_on_Thing_pressed"]
[connection signal="pressed" from="TextureRect/Exit" to="TextureRect/Exit" method="_on_Exit_pressed"]
